--- a/package.json
+++ b/package.json
@@ -9,12 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/azure": "^1.0.15",
     "@ai-sdk/openai": "^0.0.72",
-    "@assistant-ui/react": "^0.7.0",
+    "@ai-sdk/react": "^1.0.7",
+    "@assistant-ui/react": "^0.7.33",
+    "@assistant-ui/react-ai-sdk": "^0.7.6",
     "@assistant-ui/react-markdown": "^0.7.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.469.0",
+    "mongoose": "^8.9.3",
     "next": "15.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-resizable-panels": "^2.1.7",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
